tests/neg/i1568.scala
object Test {
  transparent def foo(n: Int) = foo(n) // error: cyclic reference
}
